# Copyright © 2017 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "union-find"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
description = "Union-find with path shortening"
keywords = ["union-find", "disjoint-set"]
license-file = "LICENSE"

[dependencies]

